移除不需要的代码 以及 代码规范调整