@@ -110,7 +110,7 @@ public class ThirdAppDingtalkServiceImpl implements IThirdAppService {
             if (!departmentRes.isSuccess()) {
                 syncInfo.addFailInfo(departmentRes.getErrmsg());
                 // 88 是 ip 不在白名单的错误码，如果遇到此错误码，后面的操作都可以不用进行了，因为肯定都是失败的
-                if (new Integer(88).equals(departmentRes.getErrcode())) {
+                if (Integer.valueOf(88).equals(departmentRes.getErrcode())) {
                     return syncInfo;
                 }
                 continue;
@@ -870,7 +870,7 @@ public class ThirdAppDingtalkServiceImpl implements IThirdAppService {
 
             if(userIds!=null){
                 LambdaQueryWrapper<SysUser> queryWrapper = new LambdaQueryWrapper<>();
-                queryWrapper.in(SysUser::getId, userIds);
+                queryWrapper.in(SysUser::getId, (Object) userIds);
                 List<SysUser> userList = userMapper.selectList(queryWrapper);
                 String[] usernameList = userList.stream().map(SysUser::getUsername).toArray(String[] :: new);
 
